--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:server
+    repo: https://github.com/daniellekotter/website-flashcards
     envVars:
       - key: PORT
         value: 8000
