--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,23 @@
+databases:
+  - name: flash-learning
+    databaseName: flash-learning
+    user: flash-learning
+    plan: free
+
 services:
   - type: web
     name: flash-learning
     runtime: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:server
     repo: https://github.com/daniellekotter/website-flashcards
     envVars:
-      - key: PORT
-        value: 8000
+      - key: DATABASE_URL
+        fromDatabase:
+          name: flash-learning
+          property: connectionString
+      - key: RAILS_MASTER_KEY
+        sync: false
+      - key: WEB_CONCURRENCY
+        value: 2 # sensible default
