--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:server
+    startCommand: python src/app.py
     repo: https://github.com/daniellekotter/website-flashcards
     envVars:
       - key: RAILS_MASTER_KEY
